--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
         </nav>
     </header>
 
-    {{ content }}
+    <main>
+        {{ content }}
+    </main>
 
     <footer>
         made by 6BIN (20-21)
