--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,13 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
                 <li><a href="about.html">ABOUT</a></li>
+                <li>
+                    <ul>
+                        {% for member in site.members %}
+                        <li>member.name</li>
+                        {% endfor %}
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
