--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
                 <li>
                     <ul>
                         {% for member in site.members %}
-                        <li>member.name</li>
+                        <li>{{member.name}}</li>
                         {% endfor %}
                     </ul>
                 </li>
