--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
                     <ul>
                         {% for member in site.members %}
                         <li>
-                            <a href="{{page.url}}">
+                            <a href="..{{member.url}}">
                                 {{member.title}}
                             </a>
                         </li>
