--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="../contact.html">CONTACT</a></li>
+                <li><a href="../about.html">ABOUT</a></li>
                 <li>
                     <ul>
                         {% for member in site.members %}
