--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="../index.html">HOME</a></li>
-                <li><a href="../contact.html">CONTACT</a></li>
-                <li><a href="../about.html">ABOUT</a></li>
+                <li><a href="{{site.baseurl}}/index.html">HOME</a></li>
+                <li><a href="{{site.baseurl}}/contact.html">CONTACT</a></li>
+                <li><a href="{{site.baseurl}}/about.html">ABOUT</a></li>
                 <li>
                     <ul>
                         {% for member in site.members %}
                         <li>
-                            <a href="..{{member.url}}">
+                            <a href="{{site.baseurl}}{{member.url}}">
                                 {{member.title}}
                             </a>
                         </li>
